--- a/public/name.html
+++ b/public/name.html
@@ -13,44 +13,19 @@
         max-width: 99%;
         background-color: #28af55;
       }
-      #list {
-        position: fixed;
-        bottom: 5%;
-        font-size: large;
-        font-weight: bold;
-        color: black;
-      }
-      #play {
-        font-size:xx-large;
-      }
     </style>
-    <title>HomePage</title>
+    <title>GamePage</title>
   </head>
 
   <body>
     <div class="container-fluid text-center">
       <div class="row">
         <div class="col">
-          <img class="img-fluid" src="assets/images/top-splash.jpg" alt="Reversi Logo"/>
-        </div>
-      </div>
-      <br><br>
-      <div class="row">
-        <div class="col">
-          <a href="name.html" class="btn btn-lg btn-secondary" id="play">Play</a>
+            This is GamePage
         </div>
       </div>
     </div>
-    <br><br>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col" id="list">
-          -Made by:<br>
-          Sanmukh Sinha - 1700741<br>
-          B.Tech IV Year (Elec.)
-        </div>
-      </div>
-    </div>
+
 
 
 
