--- a/public/name.html
+++ b/public/name.html
@@ -1,11 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <style>
@@ -13,23 +10,50 @@
         max-width: 99%;
         background-color: #28af55;
       }
+      #head1{
+          font-weight: bold;
+          font-size: xx-large;
+      }
     </style>
-    <title>GamePage</title>
+    <title>Enter UserName</title>
   </head>
 
   <body>
     <div class="container-fluid text-center">
-      <div class="row">
-        <div class="col">
-            This is GamePage
+        <div class="row">
+            <div class="col" id="head1">
+                Enter User Name
+            </div>
         </div>
-      </div>
+
+        <form class='form-inline'>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for='username' class='col-form-label sr-only'></label>
+                <input class='form-control' type='text' placeholder='Username' id='username'>
+              </div>
+              <div class="col" style="text-align: left;"><br>
+                <button type="submit" class='btn btn-default btn-primary' onclick="submitForm(); return false">
+                  Done
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
     </div>
+    
+    
+    <script>
+      function submitForm(){
+        var username = document.getElementById("username").value;
+        window.location.href = 'lobby.html?username=' + username;
+      }
 
-
-
-
-
+      function please(){
+        alert("God is here!")
+      }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
