--- a/public/lobby.html
+++ b/public/lobby.html
@@ -1,1 +1,41 @@
-Hello
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <style>
+      html, body{
+        max-width: 99%;
+        background-color: #28af55;
+      }
+      #head1{
+          font-weight: bold;
+          font-size: xx-large;
+      }
+    </style>
+    <title>Game Lobby</title>
+  </head>
+
+  <body>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col" id="head1">
+                Lobby
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h3>Messages</h3>
+                <div id='messages'>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src='js/main.js'></script>
+  </body>
+</html>
