Completed lobby chat

--- a/public/lobby.html
+++ b/public/lobby.html
@@ -33,6 +33,20 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+          <div class="col">
+              <form onsubmit='send_message(); return false;'>
+                <div class="form-group">
+                  <label for='send_message_holder' class='col-form-label sr-only'></label>
+                  <input class = 'form-control' type='text' value='' id='send_message_holder' placeholder='Enter message'/>
+                </div>
+                <button type='submit' class='btn btn-default btn-primary'>
+                  Send
+                </button>
+              
+              </form>
+          </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
