--- a/public/lobby.html
+++ b/public/lobby.html
@@ -26,8 +26,17 @@
             </div>
         </div>
 
+        <div class='row align-items-end' style="text-align: left;" id='players'>
+          <div class='col-9'>
+            <h3>Players</h3>
+          </div>
+          <div class='col-3'>
+          </div>
+
+          <!--This is where new players in the lobby will go-->
+        </div>
         <div class="row">
-            <div class="col">
+            <div class="col" style="text-align: left;">
                 <h3>Messages</h3>
                 <div id='messages'>
                 </div>
@@ -49,6 +58,7 @@
       </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
     <script src='js/main.js'></script>
