--- a/public/lobby.html
+++ b/public/lobby.html
@@ -7,7 +7,7 @@
 
     <style>
       html, body{
-        max-width: 99%;
+        max-width: 99.9%;
         background-color: #28af55;
       }
       #head1{
@@ -32,29 +32,25 @@
           </div>
           <div class='col-3'>
           </div>
-
           <!--This is where new players in the lobby will go-->
         </div>
         <div class="row">
-            <div class="col" style="text-align: left;">
-                <h3>Messages</h3>
-                <div id='messages'>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-          <div class="col">
-              <form onsubmit='send_message(); return false;'>
-                <div class="form-group">
+          <div class="col text-left">
+              <h3 style='text-align: left;'>Messages</h3>
+              <form class='form-inline' onsubmit='send_message(); return false;'>
                   <label for='send_message_holder' class='col-form-label sr-only'></label>
-                  <input class = 'form-control' type='text' value='' id='send_message_holder' placeholder='Enter message'/>
-                </div>
-                <button type='submit' class='btn btn-default btn-primary'>
-                  Send
-                </button>
-              
+                  <input class = 'form-control mx-auto w-75' type='text' value='' id='send_message_holder' placeholder='Enter message'/>
+                  <button type='submit' class='btn btn-default btn-primary'>
+                    Send
+                  </button>
               </form>
           </div>
+        </div>
+      <div class="row">
+        <div class="col" style="text-align: left;">
+            <div id='messages'>
+            </div>
+        </div>
       </div>
     </div>
 
