--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,8 @@
         <div class="col" id="list">
           -Made by:<br>
           Sanmukh Sinha - 1700741<br>
+          Himanshu Kardam - 1700725<br>
+          Shradha Seth - 1700751<br> 
           B.Tech IV Year (Elec.)
         </div>
       </div>
