--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <style>
       html, body{
         max-width: 99%;
-        background-color: #28af55;
+        background-color: #a5e9ec;
       }
       #list {
         position: fixed;
@@ -37,7 +37,7 @@
       <br><br>
       <div class="row">
         <div class="col">
-          <a href="name.html" class="btn btn-lg btn-secondary" id="play">Play</a>
+          <a href="name.html" class="btn btn-lg btn-secondary" id="play">Enter Lobby</a>
         </div>
       </div>
     </div>
@@ -46,16 +46,12 @@
       <div class="row">
         <div class="col" id="list">
           -Made by:<br>
-          Sanmukh Sinha - 1700741<br>
-          Himanshu Kardam - 1700725<br>
-          Shradha Seth - 1700751<br> 
-          B.Tech IV Year (Elec.)
+          Sanmukh Sinha<br>
+          1700741<br>
+          B.Tech IV Year (Elec.)<br>
         </div>
       </div>
     </div>
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
