--- a/public/lobby.html
+++ b/public/lobby.html
@@ -8,7 +8,7 @@
     <style>
       html, body{
         max-width: 99.9%;
-        background-color: #28af55;
+        background-color: #a5e9ec;
       }
       #head1{
           font-weight: bold;
@@ -28,7 +28,7 @@
 
         <div class='row align-items-end' style="text-align: left;" id='players'>
           <div class='col-9'>
-            <h3>Players</h3>
+            <h3>Users</h3>
           </div>
           <div class='col-3'>
           </div>
