--- a/public/name.html
+++ b/public/name.html
@@ -8,7 +8,7 @@
     <style>
       html, body{
         max-width: 99.9%;
-        background-color: #28af55;
+        background-color: #a5e9ec;
       }
       #head1{
           font-weight: bold;
@@ -40,6 +40,34 @@
             </div>
           </div>
         </form>
+        <br>
+        <br>
+        <form class='form-inline'>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for='username' class='col-form-label sr-only'></label>
+                <input class='form-control' type='text' placeholder='Login' id='login'>
+              </div>
+              <div class="col" style="text-align: left;"><br>
+                <button type="submit" class='btn btn-default btn-primary' onclick="submitForm(); return false">
+                  Done
+                </button>
+              </div>
+            </div>
+          </div>
+        </form>
+        <form class='form-inline'>
+          <div class="form-group">
+            <div class="row">
+              <div class="col">
+                <label for='username' class='col-form-label sr-only'></label>
+                <input class='form-control' style='width: 49%;' type='text' placeholder='Password' id='username'>
+              </div>
+            </div>
+          </div>
+        </form>
+
     </div>
     
     
