--- a/public/game.html
+++ b/public/game.html
@@ -11,10 +11,10 @@
 
   <body>
     <div class="container-fluid text-center">
-        <div class="row">
+        <!-- <div class="row">
             <div class="offset-2 col text-center">
                 <h3 id='my_color'></h3>
-            </div>
+            </div> -->
             <div class="col-2">
                 <div id='quit'></div>
             </div>
